@@ -54,7 +54,7 @@ public class AnimationRegistry
         AnimationRegistry.animationPhases.put("snakeidle", "idle");
         AnimationRegistry.animations.put("snakeswim", SnakeMovement.class);
         AnimationRegistry.animationPhases.put("snakeswim", "swimming");
-        
+
         //
         AnimationRegistry.animations.put("snakesit", SnakeMovement.class);
         AnimationRegistry.animationPhases.put("snakesit", "sitting");
@@ -82,16 +82,12 @@ public class AnimationRegistry
         final Class<? extends Animation> toMake = AnimationRegistry.animations.get(name);
         if (toMake != null) try
         {
-            ret = toMake.newInstance();
+            ret = toMake.getConstructor().newInstance();
             ret.init(map, renamer);
             if (AnimationRegistry.animationPhases.containsKey(name)) ret.name = AnimationRegistry.animationPhases.get(
                     name);
         }
-        catch (final InstantiationException e)
-        {
-            e.printStackTrace();
-        }
-        catch (final IllegalAccessException e)
+        catch (final Exception e)
         {
             e.printStackTrace();
         }
